--- a/RenzheCloud-Loadbalance.ini
+++ b/RenzheCloud-Loadbalance.ini
@@ -68,7 +68,7 @@ custom_proxy_group=🇺🇲 美国`load-balance`(美|(?i)US)`http://www.gstatic.
 custom_proxy_group=🇯🇵 日本`load-balance`(日|(?i)JP)`http://www.gstatic.com/generate_204`600,2,100
 custom_proxy_group=🇸🇬 新加坡`load-balance`(新|(?i)SG)`http://www.gstatic.com/generate_204`600,2,100
 custom_proxy_group=🇰🇷 韩国`load-balance`(韩|(?i)KR)`http://www.gstatic.com/generate_204`600,2,100
-custom_proxy_group=🇨🇦 加拿大`load-balance`(加|(?i)CA)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🇨🇦 加拿大`load-balance`(拿|(?i)CA)`http://www.gstatic.com/generate_204`600,2,100
 custom_proxy_group=🇦🇺 澳大利亚`load-balance`(澳|(?i)AU)`http://www.gstatic.com/generate_204`600,2,100
 custom_proxy_group=🇳🇱 荷兰`load-balance`(荷|(?i)NL)`http://www.gstatic.com/generate_204`600,2,100
 
