--- a/RenzheCloud-Loadbalance.ini
+++ b/RenzheCloud-Loadbalance.ini
@@ -42,11 +42,11 @@ surge_ruleset=🕹 规则之外,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🌀 负载均衡`select`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇰🇷 韩国`[]🇨🇦 加拿大`[]🇦🇺 澳大利亚`[]🇳🇱 荷兰`[]✈️ 手动选择`[]🎯 全球直连
+custom_proxy_group=🌀 负载均衡`select`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇰🇷 韩国`[]✈️ 手动选择`[]🎯 全球直连
 custom_proxy_group=✈️ 手动选择`select`(^((?!(过期|剩余|续费)).)*$)
-custom_proxy_group=📹 Youtube`select`[]🌀 负载均衡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇰🇷 韩国`[]🇨🇦 加拿大`[]🇦🇺 澳大利亚`[]🇳🇱 荷兰`[]✈️ 手动选择`[]🎯 全球直连
+custom_proxy_group=📹 Youtube`select`[]🌀 负载均衡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇰🇷 韩国`[]✈️ 手动选择`[]🎯 全球直连
 custom_proxy_group=🎥 Netflix`select`[]🌀 负载均衡`[]🇸🇬 新加坡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇰🇷 韩国`[]✈️ 手动选择`[]🎯 全球直连
-custom_proxy_group=🌍 国外媒体`select`[]🌀 负载均衡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇰🇷 韩国`[]🇨🇦 加拿大`[]🇦🇺 澳大利亚`[]🇳🇱 荷兰`[]✈️ 手动选择`[]🎯 全球直连
+custom_proxy_group=🌍 国外媒体`select`[]🌀 负载均衡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇰🇷 韩国`[]✈️ 手动选择`[]🎯 全球直连
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🌀 负载均衡`[]✈️ 手动选择
 custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾`[]🌀 负载均衡`[]✈️ 手动选择`[]🎯 全球直连
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇹🇼 台湾`[]🇭🇰 香港
@@ -68,9 +68,6 @@ custom_proxy_group=🇺🇲 美国`load-balance`(美|(?i)US)`http://www.gstatic.
 custom_proxy_group=🇯🇵 日本`load-balance`(日|(?i)JP)`http://www.gstatic.com/generate_204`600,2,100
 custom_proxy_group=🇸🇬 新加坡`load-balance`(新|(?i)SG)`http://www.gstatic.com/generate_204`600,2,100
 custom_proxy_group=🇰🇷 韩国`load-balance`(韩|(?i)KR)`http://www.gstatic.com/generate_204`600,2,100
-custom_proxy_group=🇨🇦 加拿大`load-balance`(拿|(?i)CA)`http://www.gstatic.com/generate_204`600,2,100
-custom_proxy_group=🇦🇺 澳大利亚`load-balance`(澳|(?i)AU)`http://www.gstatic.com/generate_204`600,2,100
-custom_proxy_group=🇳🇱 荷兰`load-balance`(荷|(?i)NL)`http://www.gstatic.com/generate_204`600,2,100
 
 ;设置分组标志位
 
