--- a/RenzheCloud-Loadbalance.ini
+++ b/RenzheCloud-Loadbalance.ini
@@ -59,7 +59,7 @@ custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🌀 负载均
 custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🌀 负载均衡`[]🇭🇰 香港`[]🇺🇲 美国`[]✈️ 手动选择
 custom_proxy_group=📢 谷歌FCM`select`[]🎯 全球直连`[]🌀 负载均衡`[]🇭🇰 香港`[]🇺🇲 美国`[]✈️ 手动选择
 custom_proxy_group=🌐 访问官网`select`[]🇭🇰 香港
-custom_proxy_group=💰 应急续费`select`(renew|应急续费)
+custom_proxy_group=💰 应急续费`select`(应急续费使用)
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
