--- a/RenzheCloud-Loadbalance.ini
+++ b/RenzheCloud-Loadbalance.ini
@@ -1,5 +1,5 @@
 [custom]
-;忍者云定制配置，区域负载均衡
+;忍者云定制配置，区域均衡
 ;除非您知道如何撰写规则，否则请不要自行修改
 ;感谢ACL44SSR大神提供的规则方案
 ;去广告：支持
@@ -21,19 +21,20 @@ surge_ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/m
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 surge_ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 surge_ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-surge_ruleset=📲 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-surge_ruleset=📱 Twitter,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
+surge_ruleset=📲 Telegram电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+surge_ruleset=📱 Twitter推特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
 surge_ruleset=🎶 网易云音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 surge_ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
 surge_ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 surge_ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-surge_ruleset=📹 Youtube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-surge_ruleset=🎥 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+surge_ruleset=📹 Youtube油管,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+surge_ruleset=🎥 Netflix奈飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 surge_ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 surge_ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
+surge_ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 surge_ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-surge_ruleset=🌀 负载均衡,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+surge_ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 surge_ruleset=🌐 访问官网,https://raw.githubusercontent.com/SereneWindCoding/Rules/main/renzhe.list
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
@@ -43,34 +44,37 @@ surge_ruleset=🕹 规则之外,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🌀 负载均衡`select`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇰🇷 韩国`[]✈️ 手动选择`[]🎯 全球直连
-custom_proxy_group=✈️ 手动选择`select`(^((?!(过期|剩余|续费)).)*$)
-custom_proxy_group=📹 Youtube`select`[]🌀 负载均衡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇰🇷 韩国`[]✈️ 手动选择`[]🎯 全球直连
-custom_proxy_group=🎥 Netflix`select`[]🌀 负载均衡`[]🇸🇬 新加坡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇰🇷 韩国`[]✈️ 手动选择`[]🎯 全球直连
-custom_proxy_group=🌍 国外媒体`select`[]🌀 负载均衡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇰🇷 韩国`[]✈️ 手动选择`[]🎯 全球直连
-custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🌀 负载均衡`[]✈️ 手动选择
-custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾`[]🌀 负载均衡`[]✈️ 手动选择`[]🎯 全球直连
-custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇹🇼 台湾`[]🇭🇰 香港
-custom_proxy_group=📲 Telegram`select`[]🌀 负载均衡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]✈️ 手动选择`[]🎯 全球直连
-custom_proxy_group=📱 Twitter`select`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇺🇲 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]✈️ 手动选择`[]🎯 全球直连
+
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🔯 故障转移`[]🎯 全球直连
+custom_proxy_group=✈️ 手动切换`select`(^((?!(过期|剩余|续费)).)*$)
+custom_proxy_group=📹 Youtube油管`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🎥 Netflix奈飞`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]✈️ 手动切换
+custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]✈️ 手动切换`[]🎯 全球直连
+custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
+custom_proxy_group=📲 Telegram电报`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=📱 Twitter推特`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=🎶 网易云音乐`select`[]🎯 全球直连`(网易|音乐|解锁|Music|NetEase)
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 全球直连`[]🌀 负载均衡`[]🇭🇰 香港`[]🇺🇲 美国`[]✈️ 手动选择
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🌀 负载均衡`[]🇭🇰 香港`[]🇺🇲 美国`[]✈️ 手动选择
-custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🌀 负载均衡`[]🇭🇰 香港`[]🇺🇲 美国`[]✈️ 手动选择
-custom_proxy_group=📢 谷歌FCM`select`[]🎯 全球直连`[]🌀 负载均衡`[]🇭🇰 香港`[]🇺🇲 美国`[]✈️ 手动选择
-custom_proxy_group=🌐 访问官网`select`[]🇭🇰 香港
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]✈️ 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]✈️ 手动切换
+custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]✈️ 手动切换
+custom_proxy_group=📢 谷歌FCM`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]✈️ 手动切换
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
+custom_proxy_group=🌐 访问官网`select`[]🇭🇰 香港节点
 custom_proxy_group=💰 应急续费`select`(应急续费使用)
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🕹 规则之外`select`[]🌀 负载均衡`[]✈️ 手动选择`[]🎯 全球直连
-custom_proxy_group=🇭🇰 香港`load-balance`(港|(?i)HK)`http://www.gstatic.com/generate_204`600,2,100
-custom_proxy_group=🇹🇼 台湾`load-balance`(台|(?i)TW)`http://www.gstatic.com/generate_204`600,2,100
-custom_proxy_group=🇺🇲 美国`load-balance`(美|(?i)US)`http://www.gstatic.com/generate_204`600,2,100
-custom_proxy_group=🇯🇵 日本`load-balance`(日|(?i)JP)`http://www.gstatic.com/generate_204`600,2,100
-custom_proxy_group=🇸🇬 新加坡`load-balance`(新|(?i)SG)`http://www.gstatic.com/generate_204`600,2,100
-custom_proxy_group=🇰🇷 韩国`load-balance`(韩|(?i)KR)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🕹 规则之外`select`[]🚀 节点选择`[]✈️ 手动切换`[]🎯 全球直连
+custom_proxy_group=🇭🇰 香港节点`load-balance`(港|(?i)HK)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🇹🇼 台湾节点`load-balance`(台|(?i)TW)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🇺🇲 美国节点`load-balance`(美|(?i)US)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🇯🇵 日本节点`load-balance`(日|(?i)JP)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🇸🇬 新加坡节点`load-balance`(新|(?i)SG)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🇰🇷 韩国节点`load-balance`(韩|(?i)KR)`http://www.gstatic.com/generate_204`600,2,100
 
 ;设置分组标志位
 
