--- a/RenzheCloud-Loadbalance.ini
+++ b/RenzheCloud-Loadbalance.ini
@@ -44,11 +44,11 @@ surge_ruleset=🕹 规则之外,[]FINAL
 
 ;设置分组标志位
 
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🔯 故障转移`[]🎯 全球直连
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🔯 故障转移`[]🎯 全球直连
 custom_proxy_group=✈️ 手动切换`select`(^((?!(过期|剩余|续费)).)*$)
-custom_proxy_group=📹 Youtube油管`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🎥 Netflix奈飞`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=📹 Youtube油管`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🎥 Netflix奈飞`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]✈️ 手动切换
 custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]✈️ 手动切换`[]🎯 全球直连
 custom_proxy_group=📺 哔哩哔哩`select`[]🇹🇼 台湾节点`[]🇭🇰 香港节点`[]🎯 全球直连
@@ -72,7 +72,6 @@ custom_proxy_group=🇹🇼 台湾节点`url-test`(台|(?i)TW)`http://www.gstati
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|(?i)US)`http://www.gstatic.com/generate_204`600
 custom_proxy_group=🇯🇵 日本节点`url-test`(日|(?i)JP)`http://www.gstatic.com/generate_204`600
 custom_proxy_group=🇸🇬 新加坡节点`url-test`(新|(?i)SG)`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🇰🇷 韩国节点`url-test`(韩|(?i)KR)`http://www.gstatic.com/generate_204`600
 
 ;设置分组标志位
 
