--- a/RenzheCloud-Loadbalance.ini
+++ b/RenzheCloud-Loadbalance.ini
@@ -1,6 +1,7 @@
 [custom]
 
 ;设置规则标志位
+surge_ruleset=📧 邮件客户端,https://cdn.jsdelivr.net/gh/SereneWindCoding/Rules@main/email-client.list
 surge_ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ProxyGFWlist.list
 surge_ruleset=📹 Youtube油管,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/YouTube.list
 surge_ruleset=🎥 Netflix奈飞,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Netflix.list
@@ -55,6 +56,7 @@ custom_proxy_group=📢 谷歌FCM`select`[]🎯 全球直连`[]🚀 节点选择
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🌐 访问官网`select`[]🇭🇰 香港节点`[]🔯 故障转移
+custom_proxy_group=📧 邮件客户端`select`[]🇹🇼 台湾节点
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
