--- a/RenzheCloud-Loadbalance.ini
+++ b/RenzheCloud-Loadbalance.ini
@@ -37,7 +37,7 @@ surge_ruleset=🕹 规则之外,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🔯 故障转移`[]🎯 全球直连
-custom_proxy_group=✈️ 手动切换`select`(^((?!(过期|剩余|续费)).)*$)
+custom_proxy_group=✈️ 手动切换`select`(^((?!(过期|剩余)).)*$)
 custom_proxy_group=📹 Youtube油管`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=🎥 Netflix奈飞`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]✈️ 手动切换`[]🎯 全球直连
