--- a/RenzheCloud-Loadbalance.ini
+++ b/RenzheCloud-Loadbalance.ini
@@ -8,6 +8,7 @@ surge_ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@mast
 surge_ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/BanEasyPrivacy.list
 surge_ruleset=🍃 应用净化,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/BanProgramAD.list
 surge_ruleset=📧 邮件客户端,https://cdn.jsdelivr.net/gh/SereneWindCoding/Rules@main/email-client.list
+surge_ruleset=ℹ️ 特殊网站,https://cdn.jsdelivr.net/gh/SereneWindCoding/Rules@main/special.list
 surge_ruleset=📹 Youtube油管,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/YouTube.list
 surge_ruleset=🎥 Netflix奈飞,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Netflix.list
 surge_ruleset=📺 巴哈姆特,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Bahamut.list
@@ -56,6 +57,7 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🌐 访问官网`select`[]🇭🇰 香港节点`[]🔯 故障转移
 custom_proxy_group=📧 邮件客户端`select`[]🇹🇼 台湾节点
+custom_proxy_group=ℹ️ 特殊网站`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🔯 故障转移
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
