--- a/RenzheCloud-Loadbalance.ini
+++ b/RenzheCloud-Loadbalance.ini
@@ -3,7 +3,7 @@
 ;设置规则标志位
 surge_ruleset=🌐 访问官网,https://cdn.jsdelivr.net/gh/SereneWindCoding/Rules@main/renzhe.list
 surge_ruleset=📧 邮件客户端,https://cdn.jsdelivr.net/gh/SereneWindCoding/Rules@main/email-client.list
-surge_ruleset=ℹ️ 特殊网站,https://cdn.jsdelivr.net/gh/SereneWindCoding/Rules@main/special.list
+surge_ruleset=🛩️ 特殊网站,https://cdn.jsdelivr.net/gh/SereneWindCoding/Rules@main/special.list
 surge_ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/BanAD.list
 surge_ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/BanEasyList.list
 surge_ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/BanEasyListChina.list
@@ -57,7 +57,7 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🌐 访问官网`select`[]🇭🇰 香港节点`[]🔯 故障转移
 custom_proxy_group=📧 邮件客户端`select`[]🇹🇼 台湾节点
-custom_proxy_group=ℹ️ 特殊网站`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🔯 故障转移
+custom_proxy_group=🛩️ 特殊网站`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]✈️ 手动切换`[]♻️ 自动选择`[]🔯 故障转移
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
