--- a/RenzheCloud-Loadbalance.ini
+++ b/RenzheCloud-Loadbalance.ini
@@ -25,7 +25,7 @@ surge_ruleset=🎮 游戏平台,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@mast
 surge_ruleset=🎮 游戏平台,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Sony.list
 surge_ruleset=🎮 游戏平台,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Steam.list
 surge_ruleset=📢 谷歌FCM,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/GoogleFCM.list
-surge_ruleset=🤖 OpenAI,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/OpenAi.list
+surge_ruleset=🤖 OpenAI,https://cdn.jsdelivr.net/gh/SereneWindCoding/Rules@main/OpenAI.list
 surge_ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ProxyGFWlist.list
 surge_ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/LocalAreaNetwork.list
 surge_ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/UnBan.list
